--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ python-dotenv>=1.0.0
 google-auth>=2.20.0
 google-auth-oauthlib>=1.0.0
 google-api-python-client>=2.100.0
+
+# Google Sheets Logging
+gspread>=6.0.0
